more sensible rsyslog conf

--- a/files/etc/rsyslog.d/50-default.conf
+++ b/files/etc/rsyslog.d/50-default.conf
@@ -8,9 +8,8 @@
 # First some standard log files.  Log by facility.
 #
 auth,authpriv.*			/var/log/auth.log
-*.*;auth,authpriv.none		-/var/log/syslog
-#cron.*				/var/log/cron.log
-#daemon.*			-/var/log/daemon.log
+cron.*				/var/log/cron.log
+daemon.*			-/var/log/daemon.log
 kern.*				-/var/log/kern.log
 #lpr.*				-/var/log/lpr.log
 mail.*				-/var/log/mail.log
@@ -37,10 +36,10 @@ news.notice			-/var/log/news/news.notice
 #*.=debug;\
 #	auth,authpriv.none;\
 #	news.none;mail.none	-/var/log/debug
-#*.=info;*.=notice;*.=warn;\
-#	auth,authpriv.none;\
-#	cron,daemon.none;\
-#	mail,news.none		-/var/log/messages
+*.*;\
+	auth,authpriv.none;\
+	cron,daemon.none;\
+	mail,news.none		-/var/log/messages
 
 #
 # Emergencies are sent to everybody logged in.
@@ -58,7 +57,7 @@ news.notice			-/var/log/news/news.notice
 
 # The named pipe /dev/xconsole is for the `xconsole' utility.  To use it,
 # you must invoke `xconsole' with the `-file' option:
-# 
+#
 #    $ xconsole -file /dev/xconsole [...]
 #
 # NOTE: adjust the list below, or you'll go crazy if you have a reasonably
