more sensible f2b conf

--- a/files/etc/fail2ban/jail.conf
+++ b/files/etc/fail2ban/jail.conf
@@ -44,6 +44,7 @@ maxretry = {{data.ssh_maxretry}}
 [vsftpd]
 enabled = {{data.vsftpd_enabled}}
 port = ftp,ftp-data,ftps,ftps-data
+banaction = iptables-multiport
 filter = vsftpd
 logpath = /var/log/vsftpd.log
 # or overwrite it in jails.local to be
@@ -56,6 +57,7 @@ maxretry = 6
 [proftpd]
 enabled = {{data.proftpd_enabled}}
 port = ftp,ftp-data,ftps,ftps-data
+banaction = iptables-multiport
 filter = proftpd
 logpath = /var/log/proftpd/proftpd.log
 maxretry = 6
@@ -72,6 +74,7 @@ maxretry = 6
 [wuftpd]
 enabled = {{data.wuftpd_enabled}}
 port = ftp,ftp-data,ftps,ftps-data
+banaction = iptables-multiport
 filter = wuftpd
 logpath = /var/log/syslog
 maxretry = 6
@@ -83,18 +86,24 @@ maxretry = 6
 
 [postfix]
 
-enabled = false
+enabled = {{data.postfix_enabled}}
 port = smtp,ssmtp
+banaction = iptables-multiport
 filter = postfix
 logpath = /var/log/mail.log
+          /var/log/messages
+          /var/log/syslog
 
 
 [couriersmtp]
 
-enabled = false
+enabled = {{data.courier_smtp_enabled}}
 port = smtp,ssmtp
+banaction = iptables-multiport
 filter = couriersmtp
 logpath = /var/log/mail.log
+          /var/log/messages
+          /var/log/syslog
 
 
 #
@@ -102,28 +111,35 @@ logpath = /var/log/mail.log
 # all relevant ports get banned
 #
 
-[courierauth]
+[courier-auth]
 
-enabled = false
+enabled = {{data.courier_auth_enabled}}
 port = smtp,ssmtp,imap2,imap3,imaps,pop3,pop3s
-filter = courierlogin
+banaction = iptables-multiport
+filter = courier-auth
 logpath = /var/log/mail.log
+          /var/log/messages
+          /var/log/syslog
 
 
 [sasl]
 
-enabled = false
+enabled = {{data.sasl_enabled}}
 port = smtp,ssmtp,imap2,imap3,imaps,pop3,pop3s
-filter = sasl
+banaction = iptables-multiport
+filter = postfix-sasl
 # You might consider monitoring /var/log/mail.warn instead if you are
 # running postfix since it would provide the same log lines at the
 # "warn" level but overall at the smaller filesize.
 logpath = /var/log/mail.log
+          /var/log/messages
+          /var/log/syslog
 
 [dovecot]
 
 enabled = false
 port = smtp,ssmtp,imap2,imap3,imaps,pop3,pop3s
+banaction = iptables-multiport
 filter = dovecot
 logpath = /var/log/mail.log
 
@@ -165,6 +181,7 @@ logpath = /var/log/mail.log
 
 enabled = {{data.named_refused_tcp_enabled}}
 port = domain,953
+banaction = iptables-multiport
 protocol = tcp
 filter = named-refused
 logpath = /var/log/named/security.log
@@ -177,6 +194,7 @@ logpath = /var/log/named/security.log
 enabled = {{data.asterisk_tcp_enabled}}
 filter = asterisk
 port = 5060,5061
+banaction = iptables-multiport
 protocol = tcp
 logpath = /var/log/asterisk/messages
 
@@ -185,6 +203,7 @@ logpath = /var/log/asterisk/messages
 enabled = {{data.asterisk_udp_enabled}}
 filter = asterisk
 port = 5060,5061
+banaction = iptables-multiport
 protocol = udp
 logpath = /var/log/asterisk/messages
 
