--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -400,7 +400,7 @@ CSSH_BURP_COUNTERS:
       "-l", "root", "-q",
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
-      "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_counters.py\""]
+      "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_counters.py -d $data_dir$\""]
 CSSH_BURP:
   attrs:
     import: ["C_BASE"]
@@ -697,10 +697,6 @@ CSSH_CHECK_POSTGRESQL:
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
       "CUSTM_ADM_SCRIPTS + \"/check_postgres_wrapper.sh $pg_args$\""]
-C_MAIL_SMTP:
-  attrs:
-    command: "PluginDir + \"/check_smtp -H '$host.address$'  -c '$critical$' -e '220' -f '$TESTMAIL$' -w '1' -C 'RCPT TO:<'$TESTMAIL$'>' -R '250 2.1.5 Ok' -C 'data' -R '354 End data with <CR><LF>.<CR><LF>' -C '.' -R '250 2.0.0 Ok: queued as'\""
-    import: ["C_BASE"]
 CSSH_MYSQL_HEALTH:
   attrs:
     import: ["C_BASE"]
@@ -713,7 +709,11 @@ CSSH_MYSQL_HEALTH:
       "CUSTM_ADM_SCRIPTS + \"/check_mysql_health_autoconnect.py --mode $mode$ --warning $warning$ $lookback$ --critical $critical$\""]
 C_MAIL_SMTP:
   attrs:
-    command: "PluginDir + \"/check_smtp -H '$host.address$'  -c '$critical$' -e '220' -f '$TESTMAIL$' -w '1' -C 'RCPT TO:<'$TESTMAIL$'>' -R '250 2.1.5 Ok' -C 'data' -R '354 End data with <CR><LF>.<CR><LF>' -C '.' -R '250 2.0.0 Ok: queued as'\""
+    command: "PluginDir + \"/check_smtp -H '$smtp_server$'  -c '$critical$' -e '220' -f '$TESTMAIL$' -w '1' -C 'RCPT TO:<'$TESTMAIL$'>' -R '250 2.1.5 Ok' -C 'data' -R '354 End data with <CR><LF>.<CR><LF>' -C '.' -R '250 2.0.0 Ok: queued as'\""
+    import: ["C_BASE"]
+C_MAIL_SMTP_CONNECT:
+  attrs:
+    command: "PluginDir + \"/check_smtp -H '$smtp_server$' -p '$smtp_port$' -c '$critical$' -e '220'  -w '1' \""
     import: ["C_BASE"]
 C_PING:
   attrs:
@@ -1319,12 +1319,21 @@ ST_MAIL_POP_SSL:
     check_command: "C_MAIL_POP_SSL"
     vars.warning: 1
     vars.critical: 3
+ST_MAIL_SMTP_CONNECT:
+  attrs:
+    import: ["ST_ALERT"]
+    check_command: "C_MAIL_SMTP_CONNECT"
+    vars.warning: 1
+    vars.critical: 3
+    vars.smtp_server: "$host.address$"
+    vars.smtp_port: "25"
 ST_MAIL_SMTP:
   attrs:
     import: ["ST_ALERT"]
     check_command: "C_MAIL_SMTP"
     vars.warning: 1
     vars.critical: 3
+    vars.smtp_server: "$host.address$"
 ST_MAIL_POP:
   attrs:
     import: ["ST_ALERT"]
