Support for new haproxy

--- a/files/etc/systemd/system/haproxy.service
+++ b/files/etc/systemd/system/haproxy.service
@@ -3,8 +3,8 @@ Description=HAProxy Load Balancer
 After=network.target
 
 [Service]
-ExecStartPre=/usr/bin/mc_haproxy.sh check
-ExecStart=/usr/bin/mc_haproxy.sh start
+ExecStartPre=/usr/bin/mc_haproxy.sh check systemd
+ExecStart=/usr/bin/mc_haproxy.sh start systemd
 ExecReload=/bin/kill -USR2 $MAINPID
 KillMode=mixed
 Restart=always
