--- a/files/etc/nginx/includes/icinga-web2.content.conf
+++ b/files/etc/nginx/includes/icinga-web2.content.conf
@@ -67,7 +67,7 @@ location ~ ^/nagvis(.*) {
   #
   fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
   #
-  fastcgi_pass unix:/var/spool/www/nagvis.fpm.sock;
+  fastcgi_pass unix:/var/spool/wwwicingaweb2.fpm.sock;
 }
 
 # some css & js must fallback on php (the minified version are
