--- a/files/etc/nginx/includes/pnp4nagios.content.conf
+++ b/files/etc/nginx/includes/pnp4nagios.content.conf
@@ -15,11 +15,14 @@ location ~ /\. {
 }
 location = / {
   if ($http_x_ssl = 1 ) {
-    rewrite ^/$ https://{{data.domain}}{{data.pnp4nagios.web_directory}}/index.php/graph permanent;
+          rewrite ^/$ https://pnp.makina-corpus.net/pnp4nagios/ permanent;
   }
   if ($http_x_ssl != 1) {
-    rewrite ^/$ https://{{data.domain}}{{data.pnp4nagios.web_directory}}/index.php/graph permanent;
+          rewrite ^/$ https://pnp.makina-corpus.net/pnp4nagios/ permanent;
   }
+}
+location ~ /pnp4nagios(/graph.*) {
+  rewrite  /pnp4nagios(/graph.*) https://pnp.makina-corpus.net/pnp4nagios/index.php$1 last;
 }
 location {{data.pnp4nagios.web_directory}} {
   alias {{data.doc_root}};
