add geotrek checks

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -950,6 +950,26 @@ CSSH_NTP_TIME:
       "-C",
       "CUSTM_ADM_SCRIPTS + \"/check_ntp_time -H $ntp_server$ -w $warning$ -c $critical$\""]
     import: ["C_BASE"]
+CSSH_GEOTREK_SYNC_RANDO:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "/usr/local/bin/check_sync_rando $instance$"]
+CSSH_GEOTREK_PGDUMP:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "/usr/local/bin/check_pg_dump $instance$"]
 
 
 #
@@ -1626,6 +1646,14 @@ ST_MONGODB_MEMORY:
     vars.mongo_action: memory
     vars.warning: 20
     vars.critical: 28
+ST_GEOTREK_SYNC_RANDO:
+  attrs:
+    import: ["ST_BASE"]
+    check_command: "CSSH_GEOTREK_SYNC_RANDO"
+ST_GEOTREK_PG_DUMP:
+  attrs:
+    import: ["ST_BASE"]
+    check_command: "CSSH_GEOTREK_PGDUMP"
 G_Sysadmins:
   attrs:
     members: [U_root]
