more sensible probe notif defaults

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -71,23 +71,28 @@ NT_HOST:
     command: NC_host_notify_by_email
     states: [Up, Down]
 NT_SERVICE:
+  import: [NT_BASE]
   attrs:
     command: NC_service_notify_by_email
     states: [Warning, Unknown, Critical, OK]
 
 NT_HOST_IRC:
+  import: [NT_BASE]
   attrs:
     command: NC_host_notify_by_irc
     states: [Up, Down]
 NT_SERVICE_IRC:
+  import: [NT_BASE]
   attrs:
     command: NC_service_notify_by_irc
     states: [Warning, Unknown, Critical, OK]
 NT_HOST_MATRIX:
+  import: [NT_BASE]
   attrs:
     command: NC_host_notify_by_matrix
     states: [Up, Down]
 NT_SERVICE_MATRIX:
+  import: [NT_BASE]
   attrs:
     command: NC_service_notify_by_matrix
     states: [Warning, Unknown, Critical, OK]
