--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -249,6 +249,25 @@ CSSH:
       "-H", "$ssh_host$" , "-p", "$ssh_port$",
       "-i", "$SSHKEY$", "-l", "$ssh_username$", "-q"]
     import: ["C_BASE"]
+C_SMTP_MAILDELIVERABILITY:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+       "/usr/local/admin_scripts/nagios/check_email.py",
+       "--sender=$sender$",
+       "--receiver=$receiver$",
+       "--imap-host=$imap_host$",
+       "--imap-user=$imap_user$",
+       "--imap-password=$imap_password$",
+       "--smtp-host=$smtp_host$",
+       "--smtp-password=$smtp_password$",
+       "--smtp-user=$smtp_user$",
+       "--smtp-port=$smtp_port$",
+       "--smtp-mode=$smtp_mode$",
+       "--cleanup-time=$cleanup_time$", "--cleanup"]
+    vars.smtp_mode: tls
+    vars.smtp_port: "587"
+    vars.cleanup_time: "1"
 # icinga2 quoting idiosyncrasiness
 #
 C_APACHE_STATUS:
