more sensible probe timeout

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -268,6 +268,8 @@ C_SMTP_MAILDELIVERABILITY:
     vars.smtp_mode: tls
     vars.smtp_port: "587"
     vars.cleanup_time: "1"
+    vars.timeout: 1800
+    vars.ssh_timeout: 1800
 # icinga2 quoting idiosyncrasiness
 #
 C_APACHE_STATUS:
