--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -273,7 +273,8 @@ C_SMTP_MAILDELIVERABILITY:
     vars.smtp_mode: tls
     vars.smtp_port: "587"
     vars.cleanup_time: "1"
-    vars.timeout: 1800
+    timeout: 480
+    vars.timeout: 480
     vars.ssh_timeout: 1800
 # icinga2 quoting idiosyncrasiness
 #
@@ -712,6 +713,17 @@ C_MAIL_POP_SSL:
       $other_args$: {}
     command: "PluginDir + \"/check_pop\""
     import: ["C_BASE"]
+CSSH_CHECK_POSTGRESQL_R:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "CUSTM_ADM_SCRIPTS + \"/check_postgres.pl $pg_args$\""]
 CSSH_CHECK_POSTGRESQL:
   attrs:
     import: ["C_BASE"]
@@ -1458,6 +1470,16 @@ ST_WEB_OPENID:
     check_interval: '5m'
     import: ["ST_WEB"]
     check_command: "C_HTTPS_OPENID_REDIRECT"
+ST_POSTGRESQL_R:
+  attrs:
+    check_interval: '5m'
+    import: ["ST_BASE"]
+    check_command: "CSSH_CHECK_POSTGRESQL_R"
+ST_POSTGRESQL_CONNECTION_TIME_R:
+  attrs:
+    check_interval: '5m'
+    import: ["ST_POSTGRESQL_R"]
+    vars.pg_args: "--action=connection"
 ST_POSTGRESQL:
   attrs:
     check_interval: '5m'
