--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -438,6 +438,22 @@ CSSH_BURP:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_backup_age.py -H $backup_name$ -d $data_dir$ -w $warning$ -c $critical$\""]
+CSSH_SSL_CERTFILE:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C", "CUSTM_ADM_SCRIPTS + \"/check_ssl_certificate -f $cert_path$ -w $warning$ -c $critical$\"",]
+    vars.cert_path: ""
+    vars.warning:  15
+    vars.critical: 5
+    timeout: 480
+    vars.timeout: 480
+    vars.ssh_timeout: 1800
 C_CHECK_ONE_NAGIOS_ONLY:
   attrs:
     arguments:
@@ -1404,6 +1420,12 @@ ST_MAIL_IMAP_SSL:
     check_command: "C_MAIL_IMAP_SSL"
     vars.warning: 1
     vars.critical: 3
+ST_SSL_CERTFILE:
+  attrs:
+    import: ["ST_ALERT"]
+    check_command: "CSSH_SSL_CERTFILE"
+    vars.warning:  15
+    vars.critical: 5
 ST_MAIL_IMAP:
   attrs:
     import: ["ST_ALERT"]
