--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -1422,6 +1422,8 @@ ST_MAIL_IMAP_SSL:
     vars.critical: 3
 ST_SSL_CERTFILE:
   attrs:
+    check_interval: '720m'
+    retry_interval: '60m'
     import: ["ST_ALERT"]
     check_command: "CSSH_SSL_CERTFILE"
     vars.warning:  15
