--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -1024,9 +1024,17 @@ CSSH_GEOTREK_PGDUMP:
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
       "/usr/local/bin/check_pg_dump $instance$"]
+C_LDAP_TLS:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_ldap\"", "-4", "-T",
+      "-H", "$ldap_host$",
+      "-b", "$ldap_base$",
+      "-a", "$ldap_query$",
+      "-D", "$ldap_dn$",
+      "-P", "$ldap_pw$",]
 
-
-#
 # HOSTS TEMPLATES
 #
 HT_BASE:
@@ -1726,6 +1734,13 @@ ST_GEOTREK_PG_DUMP:
   attrs:
     import: ["ST_BASE"]
     check_command: "CSSH_GEOTREK_PGDUMP"
+ST_LDAP_TLS:
+  attrs:
+    check_interval: '10m'
+    retry_interval: '2m'
+    import: ["ST_BASE"]
+    check_command: "C_LDAP_TLS"
+#
 G_Sysadmins:
   attrs:
     members: [U_root]
