add more probes

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -319,6 +319,16 @@ C_NGINX_STATUS:
     command: [
       "CUSTM_ADM_SCRIPTS + \"/check_nginx_status.pl -H $http_host$ -p $port$ --ciritcal=$critical$ --warn=$warning$ -s $http_servername$\""]
     import: ["C_BASE"]
+CSSH_SYNCREPL:
+  attrs:
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C", "cd /srv/docker/slapd && docker-compose exec -T slapd /probe.sh"]
+    import: ["C_BASE"]
 CSSH_CHECK_SAR_PERF:
   attrs:
     command: [
@@ -1674,6 +1684,12 @@ ST_MYSQL_TMP_DISK_TABLES:
     vars.mode: "tmp-disk-tables"
     vars.warning: "100"
     vars.critical: "100"
+ST_SYNCREPL:
+  attrs:
+    check_interval: '20m'
+    retry_interval: '2m'
+    import: ["ST_ALERT"]
+    check_command: "CSSH_SYNCREPL"
 ST_INOTIFY:
   attrs:
     check_interval: '3m'
