ensure all https probe use sni

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -552,15 +552,15 @@ C_HTTP_STRING_E:
 C_HTTPS_STRING_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$ --sni\""
 C_HTTP_STRING_AUTH_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ -p $port$ --sni\""
 C_HTTPS_STRING_AUTH_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$ --sni\""
 C_HTTP_STRING:
   attrs:
     import: ["C_BASE"]
@@ -568,7 +568,7 @@ C_HTTP_STRING:
 C_HTTPS_STRING:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$ --sni\""
 C_HTTP_STRING_AUTH:
   attrs:
     import: ["C_BASE"]
@@ -576,7 +576,7 @@ C_HTTP_STRING_AUTH:
 C_HTTPS_STRING_AUTH:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$ --sni\""
 CSSH_HTTP_STRING:
   attrs:
     import: ["C_BASE"]
@@ -598,7 +598,7 @@ CSSH_HTTPS_STRING:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$ --sni\""]
 CSSH_HTTP_STRING_AUTH:
   attrs:
     import: ["C_BASE"]
@@ -642,7 +642,7 @@ CSSH_HTTPS_STRING_AUTH:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$ --sni\""]
 CSSH_HTTPS_CERT_E:
   attrs:
     import: ["C_BASE"]
