--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -27,9 +27,6 @@ NCT_BASE:
       NOTIFICATIONAUTHORNAME: "$notification.author$"
       NOTIFICATIONCOMMENT: "$notification.comment$"
       USEREMAIL: "$user.email$"
-      MX_SERVER: ""
-      MX_TOKEN: ""
-      MX_ROOM: ""
 NC_service_notify_by_email:
   attrs:
     import: ["NCT_BASE"]
@@ -50,14 +47,17 @@ NCT_MATRIX:
   attrs:
     command: [/usr/bin/icinga_matrix.sh]
     import: ["NCT_BASE"]
+    vars.MX_SERVER: "$user.vars.MX_SERVER$"
+    vars.MX_TOKEN: "$user.vars.MX_TOKEN$"
+    vars.MX_ROOM: "$user.vars.MX_ROOM$"
 NC_host_notify_by_matrix:
   attrs:
     import: ["NCT_MATRIX"]
-    command: [/usr/bin/icinga_matrix.sh, "$$MX_TOKEN", "$$MX_SERVER", "$$MX_ROOM", "host"]
+    command: [/usr/bin/icinga_matrix.sh, "$MX_TOKEN$", "$MX_SERVER$", "$MX_ROOM$", "host"]
 NC_service_notify_by_matrix:
   attrs:
     import: ["NCT_MATRIX"]
-    command: [/usr/bin/icinga_matrix.sh, "$$MX_TOKEN", "$$MX_SERVER", "$$MX_ROOM", "service"]
+    command: [/usr/bin/icinga_matrix.sh, "$MX_TOKEN$", "$MX_SERVER$", "$MX_ROOM$", "service"]
 
 #
 # Notifs.
@@ -1788,5 +1788,5 @@ U_bot:
     email: ircbot@localhost
 U_matrixbot:
   attrs:
-    email: matrix@localhost
+    vars.MX_ROOM: ""
 # vim: set ft=yaml:
