add size checks

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -740,6 +740,20 @@ CSSH_CHECK_POSTGRESQL_R:
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
       "CUSTM_ADM_SCRIPTS + \"/check_postgres.pl $pg_args$\""]
+CSSH_CHECK_DIRSIZE:
+  attrs:
+    import: ["C_BASE"]
+    vars.critical: 1000
+    vars.warning: 1000
+    vars.path: /
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "CUSTM_ADM_SCRIPTS + \"/check_dirsize.sh -f -d $path$ -w $warning$ -c $critical$\""]
 CSSH_CHECK_POSTGRESQL:
   attrs:
     import: ["C_BASE"]
@@ -1362,6 +1376,12 @@ ST_NTP_TIME:
     check_interval: '1200m'
     import: ["ST_BASE", "ST_ALERT"]
     check_command: "CSSH_NTP_TIME"
+ST_DIR_SIZE:
+ attrs:
+    check_interval: '60m'
+    retry_interval: '10m'
+    import: ["ST_BASE", "ST_ALERT"]
+    check_command: "CSSH_CHECK_DIRSIZE"
 ST_NIC_CARD:
   attrs:
     check_command: CSSH_NETWORK
