complete vhost stuff

--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -102,7 +102,7 @@ server {
     {% endif %}
     server_name {{ data.server_name }}{% if (False == data.redirect_aliases) and data.server_aliases %} {{ data.server_aliases|join(' ') }}{%endif%};
 
-    server_name_in_redirect {{ data.get('server_name_in_redirect', True) in [False] and 'off' or 'on' }};
+    server_name_in_redirect {{ data.get('server_name_in_redirect', True) in [False, 'off'] and 'off' or 'on' }};
     error_log {{data.data.logdir}}/{{ data.small_name }}-error.log {{data.loglevel}};
     access_log  {{data.data.logdir}}/{{ data.small_name }}-access.log {{data.data.logformat}} if=$method_loggable;
     # feed the map variables for ssl up
@@ -162,7 +162,7 @@ server {
     {% endif %}
     server_name {{ data.server_name }}{% if (False == data.redirect_aliases) and data.server_aliases %} {{ data.server_aliases|join(' ') }}{%endif%};
 
-    server_name_in_redirect {{ data.get('server_name_in_redirect', True) in [False] and 'off' or 'on' }};
+    server_name_in_redirect {{ data.get('server_name_in_redirect', True) in [False, 'off'] and 'off' or 'on' }};
     error_log {{data.data.logdir}}/ssl_{{ data.small_name }}-error.log {{data.loglevel}};
     access_log  {{data.data.logdir}}/ssl_{{ data.small_name }}-access.log {{data.data.logformat}} if=$method_loggable;
     # feed the map variables for ssl up
