--- a/requirements/requirements-py3.txt
+++ b/requirements/requirements-py3.txt
@@ -4,6 +4,7 @@ six >= 1.9.0
 chardet >= 2.3.0
 ordereddict >= 1.1
 
+
 Jinja2 >= 2.7.3
 markupsafe >= 0.23
 
@@ -48,14 +49,20 @@ msgpack>1.0.0
 
 pycparser >= 2.10
 pylibmc >= 1.4.1
-PyYAML >= 3.11
-pyzmq >= 14.5.0
+PyYAML > 5.1
 smmap >= 0.9.0
 snowballstemmer >= 1.2.0
 
 docker-py >= 1.7.0
 
 pyprof2calltree >= 1.3.2
+
+singledispatch==3.4.0.3
+contextvars
+psutil>=5.0.0
+pycryptodomex>=3.9.8
+
+ruamel.yaml
 
 # ansible
 paramiko
