--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -1059,6 +1059,21 @@ C_LDAP_TLS:
       "-D", "$ldap_dn$",
       "-P", "$ldap_pw$",]
 
+CSSH_LDAP_TLS:
+  attrs:
+    # handle case where apache listens on an ip
+    import: ["C_BASE"]
+    vars.warning: "80"
+    vars.critical: "120"
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "/usr/lib/nagios/plugins/check_ldap -4 -T -H $ldap_host$ -b $ldap_base$ -a \"$ldap_query$\" -D $ldap_dn$ -P \"$ldap_pw$\"",]
+    import: ["C_BASE"]
+
 # HOSTS TEMPLATES
 #
 HT_BASE:
@@ -1776,6 +1791,12 @@ ST_LDAP_TLS:
     retry_interval: '2m'
     import: ["ST_BASE"]
     check_command: "C_LDAP_TLS"
+ST_SSH_LDAP_TLS:
+  attrs:
+    check_interval: '10m'
+    retry_interval: '2m'
+    import: ["ST_BASE"]
+    check_command: "CSSH_LDAP_TLS"
 #
 G_Sysadmins:
   attrs:
