More compat with salt-3002/python3

--- a/etc/salt/minion.d/00_global.conf
+++ b/etc/salt/minion.d/00_global.conf
@@ -24,7 +24,7 @@ id: makinastates.local
 file_roots:
   base:
     - /srv/makina-states/salt/overrides
-    - /srv/makina-states/salt
+    - /srv/makina-states/fileroot
     - /srv/salt
 pillar_roots:
   base:
