--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ boot_salt_top
 /etc/salt/makina-states
 /requirements/git_requirements.txt
 /salt/makina-projects
+/fileroot/makina-projects
 /pillar/makina-projects
 /pillar/pillar.d
 /pillar/private.pillar.d
@@ -91,6 +92,8 @@ boot_salt_top
 /ansible/**/*.retry
 /etc/ansible/inventories
 /etc/ansible/*_inventories/
+/fileroot/_modules/
+/fileroot/_pillar/
 /salt/_modules/
 /salt/_pillar/
 *.retry
