Port icinga2 states to 22.04

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -386,6 +386,17 @@ CSSH_NETWORK:
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
       "CUSTM_ADM_SCRIPTS + \"/check_ifutil.pl -i $interface$ -w $warning$ -c $critical$ -b $ifbw$ -p\""]
+CSSH_NETWORK_OUT:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "CUSTM_ADM_SCRIPTS + \"/check_ifutil_wrapper -w $warning$ -c $critical$ -b $ifbw$ -p\""]
 C_CHECK_RBL:
   attrs:
     command: [
@@ -1412,6 +1423,13 @@ ST_NIC_CARD:
     check_command: CSSH_NETWORK
     import: ["ST_BASE"]
     vars.interface: eth0
+    vars.warning: 100
+    vars.ifbw: "100M"
+    vars.critical: 100
+ST_NIC_CARD_OUT:
+  attrs:
+    check_command: CSSH_NETWORK_OUT
+    import: ["ST_BASE"]
     vars.warning: 100
     vars.ifbw: "100M"
     vars.critical: 100
