--- a/files/etc/php/common/fpm/pool.d/pool.conf
+++ b/files/etc/php/common/fpm/pool.d/pool.conf
@@ -301,7 +301,7 @@ php_admin_value[display_errors]          = {{data.display_errors}}
 php_admin_value[html_errors]             = {{data.html_errors}}
 php_admin_value[display_startup_errors]  = {{data.display_startup_errors}}
 php_admin_value[define_syslog_variables] = {{data.define_syslog_variables}}
-php_value[error_reporting]               = {{data.error_reporting}}
+php_admin_value[error_reporting]         = {{data.error_reporting}}
 
 ; Maximum execution time of each script, in seconds (30)
 php_value[max_input_time]     ="{{ data.max_input_time }}"
