--- a/files/etc/icingaweb2/modules/monitoring/backends.ini
+++ b/files/etc/icingaweb2/modules/monitoring/backends.ini
@@ -1,4 +1,5 @@
 {% set settings = salt['mc_icinga_web2.settings']() %}
-[icinga2]
-type                = "ido"
-resource            = "icinga2"
+;moved to icingadb
+;[icinga2]
+;type                = "ido"
+;resource            = "icinga2"
